manifest/objects/Msg_Bus_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>LVN_API_Name__c</fullName>
        <label>LVN API Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obj_Api__c</fullName>
        <label>Object API Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDH_API_Name__c</fullName>
        <label>TDH API Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Msg Bus Mapping</label>
    <pluralLabel>Msg Bus Mapping</pluralLabel>
</CustomObject>